--- a/about.html
+++ b/about.html
@@ -96,4 +96,4 @@ div.text {
 </ul></p>
 <p><b>For more information, feel free to <a href="contact.html" target="_blank">contact</a> me or check out my resume</b></p>
 </div>
-<img src="image\signature.png" alt="signature" border="0"></a>
+<img src="image/signature.png" alt="signature" border="0"></a>
